@@ -212,10 +212,13 @@ public class TestText extends TestCase {
           
       assertEquals(ret1, ret2);
           
-      // test equal
-      assertEquals(txt1.compareTo(txt3), 0);
-      assertEquals(comparator.compare(out1.getData(), 0, out3.getLength(),
-                                      out3.getData(), 0, out3.getLength()), 0);
+      assertEquals("Equivalence of different txt objects, same content" ,
+              0,
+              txt1.compareTo(txt3));
+      assertEquals("Equvalence of data output buffers",
+              0,
+              comparator.compare(out1.getData(), 0, out3.getLength(),
+                      out3.getData(), 0, out3.getLength()));
     }
   }
       
@@ -287,7 +290,7 @@ public class TestText extends TestCase {
 
     @Override
     public void run() {
-      String name = this.getName();
+      final String name = this.getName();
       DataOutputBuffer out = new DataOutputBuffer();
       DataInputBuffer in = new DataInputBuffer();
       for (int i=0; i < 1000; ++i) {
@@ -298,7 +301,7 @@ public class TestText extends TestCase {
           in.reset(out.getData(), out.getLength());
           String s = WritableUtils.readString(in);
           
-          assertEquals(name, s);
+          assertEquals("input buffer reset contents = " + name, name, s);
         } catch (Exception ioe) {
           throw new RuntimeException(ioe);
         }
@@ -388,13 +391,19 @@ public class TestText extends TestCase {
     }
   }
   
-  public void testUtf8Length() {         
-    assertEquals("testUtf8Length1 error   !!!", 1, Text.utf8Length(new String(new char[]{(char)1})));
-    assertEquals("testUtf8Length127 error !!!", 1, Text.utf8Length(new String(new char[]{(char)127})));
-    assertEquals("testUtf8Length128 error !!!", 2, Text.utf8Length(new String(new char[]{(char)128})));
-    assertEquals("testUtf8Length193 error !!!", 2, Text.utf8Length(new String(new char[]{(char)193})));    
-    assertEquals("testUtf8Length225 error !!!", 2, Text.utf8Length(new String(new char[]{(char)225})));
-    assertEquals("testUtf8Length254 error !!!", 2, Text.utf8Length(new String(new char[]{(char)254})));                 
+  public void testUtf8Length() {
+    assertEquals("testUtf8Length1 error   !!!",
+            1, Text.utf8Length(new String(new char[]{(char)1})));
+    assertEquals("testUtf8Length127 error !!!",
+            1, Text.utf8Length(new String(new char[]{(char)127})));
+    assertEquals("testUtf8Length128 error !!!",
+            2, Text.utf8Length(new String(new char[]{(char)128})));
+    assertEquals("testUtf8Length193 error !!!",
+            2, Text.utf8Length(new String(new char[]{(char)193})));
+    assertEquals("testUtf8Length225 error !!!",
+            2, Text.utf8Length(new String(new char[]{(char)225})));
+    assertEquals("testUtf8Length254 error !!!",
+            2, Text.utf8Length(new String(new char[]{(char)254})));
   }
   
   public static void main(String[] args)  throws Exception
