@@ -34,6 +34,7 @@ public class TestFileHandle {
     // Deserialize it back 
     FileHandle handle2 = new FileHandle();
     handle2.deserialize(xdr.asReadOnlyWrap());
-    Assert.assertEquals(handle.getFileId(), 1024);
+    Assert.assertEquals("Failed: Assert 1024 is id ", 1024, 
+            handle.getFileId());
   }
 }
